Add 'macpic.jpeg' and link to it within 'macandcheese.html'

--- a/recipes/macandcheese.html
+++ b/recipes/macandcheese.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Mac and Cheese recipe</h1>
     <a href="../index.html">Home page</a>
+    <img src="macpic.jpeg" alt="Picture of yummy mac and cheese">
 </body>
 </html>
