Add html content
Added sections for content to include description, ingredients, steps

--- a/recipes/macandcheese.html
+++ b/recipes/macandcheese.html
@@ -9,5 +9,27 @@
     <h1>Mac and Cheese recipe</h1>
     <a href="../index.html">Home page</a>
     <img src="macpic.jpeg" alt="Picture of yummy mac and cheese">
+    <h2>Description: </h2>
+    <p1>This cheesey mac and cheese is full of cheese and noodles.</p1>
+
+    <h3>Ingredients list</h3>
+    <ul>
+        <li>1 box of Curly noodles</li>
+        <li>1 block of cheddar cheese - shredded</li>
+        <li>1/2 cup of milk</li>
+        <li>1/2 stick of butter</li>
+        <li>1 Tbs of flour</li>
+        <li>season to taste</li>
+    </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <li>Cook noodles</li>
+        <li>While noodles are cooking, melt butter in a pan</li>
+        <li>Whisk in flour</li>
+        <li>Once thickened, add milk slowly and keep whisking</li>
+        <li>When combined and thickening, add in shredded cheese until melted</li>
+        <li>Combine in cooked noodles and stir to mix</li>
+    </ol>
 </body>
 </html>
