--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     
     <h1>Odin Recipes</h1>
     <a href="recipes/macandcheese.html">Mac and Cheese recipe</a>
+    <a href="recipes/sandwich.html">Sandwich recipe</a>
 
 </body>
 </html>
