Add link to coffee recipe

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Odin Recipes</h1>
     <a href="recipes/macandcheese.html">Mac and Cheese recipe</a>
     <a href="recipes/sandwich.html">Sandwich recipe</a>
+    <a href="recipes/coffee.html">Coffee recipe</a>
 
 </body>
 </html>
