--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 <body>
     
     <h1>Odin Recipes</h1>
-    <a href="recipes/macandcheese.html">Mac and Cheese recipe</a>
-    <a href="recipes/sandwich.html">Sandwich recipe</a>
-    <a href="recipes/coffee.html">Coffee recipe</a>
-
+        <ul>
+            <li><a href="recipes/macandcheese.html">Mac and Cheese recipe</a></li>
+            <li><a href="recipes/sandwich.html">Sandwich recipe</a></li>
+            <li><a href="recipes/coffee.html">Coffee recipe</a></li>
+        </ul>
+    
 </body>
 </html>
