Fix broken image links

--- a/recipes/sandwich.html
+++ b/recipes/sandwich.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <a href="../index.html">Home page</a>
-    <img src="/recipes/sandwichpic.jpg" alt="Image of a sandwich">
+    <img src="/recipes/sandwichpic.jpeg" alt="Image of a sandwich">
 
     <h1>Description:</h1>
     <p1>This recipe is to create the best sandwich you might ever have.</p1>
