Fix broken image links

--- a/recipes/coffee.html
+++ b/recipes/coffee.html
@@ -8,7 +8,7 @@
 <body>
     <a href="../index.html">Home page</a>
     <h1>Coffee recipe</h1>
-    <img src="/recipes/coffeepic.jpeg" alt="Image of a coffee cup">
+    <img src="coffeepic.jpeg" alt="Image of a coffee cup">
     <h2>Description:</h2>
     <p1>This recipe is to pour the worlds best cup of coffee</p1>
     <h2>ingredients</h2>
