--- a/recipes/sandwich.html
+++ b/recipes/sandwich.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <a href="../index.html">Home page</a>
-    <img src="/recipes/sandwichpic.jpeg" alt="Image of a sandwich">
-
-    <h1>Description:</h1>
+    <h1>Coffee Recipe</h1>
+    <img src="sandwichpic.jpeg" alt="Image of a sandwich">
+    <h2>Description:</h2>
     <p1>This recipe is to create the best sandwich you might ever have.</p1>
-    <h2>Ingredients</h2>
+    <h3>Ingredients</h3>
     <ul>
         <li>2 slices of bread</li>
         <li>1 slice of your favorite cheese</li>
@@ -21,7 +21,7 @@
         <li>Sauce to spread</li>
     </ul>
 
-    <h2>Steps:</h2>
+    <h3>Steps:</h3>
     <ol>
         <li>Assemble all ingredients</li>
         <li>Between the slices of bread, layer each of the other ingredients</li>
