Update recipe htmls to include CSS reference

--- a/recipes/sandwich.html
+++ b/recipes/sandwich.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Sandwich recipe</title>
 </head>
 <body>
     <a href="../index.html">Home page</a>
-    <h1>Coffee Recipe</h1>
-    <img src="sandwichpic.jpeg" alt="Image of a sandwich">
+    <h1>Sandwich Recipe</h1>
+    <img class="image" src="sandwichpic.jpeg" alt="Image of a sandwich">
     <h2>Description:</h2>
     <p1>This recipe is to create the best sandwich you might ever have.</p1>
     <h3>Ingredients</h3>
