--- a/recipes/coffee.html
+++ b/recipes/coffee.html
@@ -3,22 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Coffee recipe</title>
 </head>
 <body>
     <a href="../index.html">Home page</a>
     <h1>Coffee recipe</h1>
-    <img src="coffeepic.jpeg" alt="Image of a coffee cup">
+    <img class="image" src="coffeepic.jpeg" alt="Image of a coffee cup">
     <h2>Description:</h2>
     <p1>This recipe is to pour the worlds best cup of coffee</p1>
-    <h2>ingredients</h2>
+    <h3>ingredients</h3>
     <ul>
         <li>coffee grounds</li>
         <li>coffee filters</li>
         <li>water</li>
         <li>coffee maker</li>
     </ul>
-    <h2>Steps</h2>
+    <h3>Steps</h3>
     <ol>
         <li>Put water in the coffee maker</li>
         <li>Put the filter into the coffee maker</li>
