--- a/recipes/macandcheese.html
+++ b/recipes/macandcheese.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Mac and Cheese recipe</title>
 </head>
 <body>
-    <h1>Mac and Cheese recipe</h1>
     <a href="../index.html">Home page</a>
-    <img src="macpic.jpeg" alt="Picture of yummy mac and cheese">
+    <h1>Mac and Cheese recipe</h1>
+    <img class="image" src="macpic.jpeg" alt="Picture of yummy mac and cheese">
     <h2>Description: </h2>
     <p1>This cheesey mac and cheese is full of cheese and noodles.</p1>
 
