Modify HTML to break sections into 'divs'.
I added divs into each HTML to have better control of the css.

--- a/recipes/coffee.html
+++ b/recipes/coffee.html
@@ -8,17 +8,28 @@
 </head>
 <body>
     <a href="../index.html">Home page</a>
+
+    <div class="titleblock">
     <h1>Coffee recipe</h1>
-    <img class="image" src="coffeepic.jpeg" alt="Image of a coffee cup">
+    <img class="image" src="coffeepic.jpeg" alt="Image of a coffee cup"> 
+    </div>
+
+    <div class="description">
     <h2>Description:</h2>
     <p1>This recipe is to pour the worlds best cup of coffee</p1>
-    <h3>ingredients</h3>
+    </div>
+
+    <div class="ingredients">
+    <h3>Ingredients</h3>
     <ul>
         <li>coffee grounds</li>
         <li>coffee filters</li>
         <li>water</li>
         <li>coffee maker</li>
     </ul>
+    </div>
+
+    <div class="steps">
     <h3>Steps</h3>
     <ol>
         <li>Put water in the coffee maker</li>
@@ -26,5 +37,6 @@
         <li>Put coffee grounds in the filter</li>
         <li>Press 'start' button on the machine</li>
     </ol>
+    </div>
 </body>
 </html>
