--- a/recipes/macandcheese.html
+++ b/recipes/macandcheese.html
@@ -8,11 +8,18 @@
 </head>
 <body>
     <a href="../index.html">Home page</a>
+
+    <div class="titleblock">
     <h1>Mac and Cheese recipe</h1>
     <img class="image" src="macpic.jpeg" alt="Picture of yummy mac and cheese">
+    </div>
+
+    <div class="description">    
     <h2>Description: </h2>
     <p1>This cheesey mac and cheese is full of cheese and noodles.</p1>
+    </div>
 
+    <div class="ingredients">
     <h3>Ingredients list</h3>
     <ul>
         <li>1 box of Curly noodles</li>
@@ -22,7 +29,9 @@
         <li>1 Tbs of flour</li>
         <li>season to taste</li>
     </ul>
+    </div>
 
+    <div class="steps">
     <h3>Steps</h3>
     <ol>
         <li>Cook noodles</li>
@@ -32,5 +41,6 @@
         <li>When combined and thickening, add in shredded cheese until melted</li>
         <li>Combine in cooked noodles and stir to mix</li>
     </ol>
+    </div>
 </body>
 </html>
