--- a/recipes/sandwich.html
+++ b/recipes/sandwich.html
@@ -8,10 +8,18 @@
 </head>
 <body>
     <a href="../index.html">Home page</a>
+
+    <div class="titleblock">
     <h1>Sandwich Recipe</h1>
     <img class="image" src="sandwichpic.jpeg" alt="Image of a sandwich">
+    </div>
+
+    <div class="description">
     <h2>Description:</h2>
     <p1>This recipe is to create the best sandwich you might ever have.</p1>
+    </div>
+
+    <div class="ingredients">
     <h3>Ingredients</h3>
     <ul>
         <li>2 slices of bread</li>
@@ -21,12 +29,15 @@
         <li>Diced onion</li>
         <li>Sauce to spread</li>
     </ul>
+    </div>
 
+    <div class="steps">
     <h3>Steps:</h3>
     <ol>
         <li>Assemble all ingredients</li>
         <li>Between the slices of bread, layer each of the other ingredients</li>
         <li>Spread the sauce on one or both insides of the bread.</li>
     </ol>
+    </div>
 </body>
 </html>
