--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Recipe Home Page</title>
 </head>
 <body>
     
     <h1>Odin Recipes</h1>
+        <div class="recipelist">
         <ul>
             <li><a href="recipes/macandcheese.html">Mac and Cheese recipe</a></li>
             <li><a href="recipes/sandwich.html">Sandwich recipe</a></li>
             <li><a href="recipes/coffee.html">Coffee recipe</a></li>
         </ul>
+        </div>
     
 </body>
 </html>
